# booking_room

./: .dockerignore  .gitignore  Dockerfile  README.md  app.js  db.json  docker-compose.yml  index.html  styles.css
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/routers/: auth.py  bookings.py  rooms.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  index.css
frontend/src/components/: Layout.tsx  RequireAuth.tsx
frontend/src/pages/: AdminPage.tsx  LoginPage.tsx  MyBookingsPage.tsx  RegisterPage.tsx  RoomDetailPage.tsx  RoomsPage.tsx
frontend/src/utils/: datetime.ts
